# ai.cli

./: DESIGN_SPEC.md  Dockerfile.test  Makefile  README.md  design_prompt.md  docker-compose.test.yml  install.sh  pyproject.toml
.gemini/: project_rules.md
.gemini/prompts/: initial.prompt
.windsurf/rules/: github_rules.md  project-structure.md  tools.md
.windsurf/workflows/: check-gh-action-log.md  doc-update.md
ai_cli/: __main__.py  backup.py  config.py  main.py  resources.py  sync.py
ai_cli/core/: content.py
ai_cli/core/adapters/: __init__.py  gemini.py  q_cli.py  windsurf.py
ai_cli/tools/: __init__.py  gemini_adapter.py  qcli_adapter.py  windsurf_adapter.py
doc/design/: content_paths.md
prompts/: initial.prompt
tests/: README.md  conftest.py
tests/integration/: test_ai_cli_integration.py  test_container_setup.py  test_resource_management.py
tests/integration/fixtures/: test_config.yaml
tests/integration/fixtures/mock_tools/: cursor  gemini  q  windsurf
tests/unit/: test_content_manager.py  test_tool_adapters.py
